# sigil

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  EXAMPLE.md  README.md  dispatch.md  extension.md  import-graph.md  microkernel.md  notes.md  pyproject.toml  refactor.md  semantics.md
.github/workflows/: ci.yml  release.yml
commas/: README.md  pyproject.toml
commas/tests/: test_display.py  test_history.py  test_install.py  test_operators.py  test_security_state.py  test_shell_bindings.py  test_status.py  test_workflows.py  test_zeta_trace.py
docs/: cli.md  demo.tape  make-tuis-obsolete.md  migration-commas-to-zeta.md  security-lattice.md  semantic-operators-roadmap.md  ux-directions.md  zeta-prompt-trace.md  zsh-native-zeta-loop.md
docs/demos/: README.md  fake_model_server.py  trace-replay.md
emacs/: README.md  zeta-block.el
emacs/demos/: 04-real-question-llm.cast  05-real-action-llm.cast  README.md  real-action-demo.el  (+1 more)
roadmap/: roadmap.md
sigil/: cli.py  pi_stream.py  question.py  qwen.py  session.py  state.py
test_support/: __init__.py
tests/: _zeta_helpers.py  conftest.py  test_display.py  test_edit.py  test_history.py  test_install.py  test_ledger.py  test_operators.py  test_security_state.py  test_shell_bindings.py  test_status.py  test_workflows.py  test_zeta_agent.py  test_zeta_agents.py  test_zeta_codex_auth.py  test_zeta_event_projection.py  test_zeta_model.py  test_zeta_prompt.py  test_zeta_responses.py  test_zeta_runtime.py  test_zeta_tools.py  test_zeta_trace.py
zeta/: README.md  pyproject.toml
zsh/: install.zsh  sigil.zsh
(+292 files in other folders)
