[project]
name = "zeta-monorepo"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "commas",
  "zeta-os",
]

[tool.uv]
package = false

[tool.uv.sources]
commas = { workspace = true }
zeta-os = { workspace = true }

[tool.uv.workspace]
members = [
  "commas",
  "zeta",
]

[dependency-groups]
dev = [
    "complexipy>=5.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "error",
  "ignore:This process.*is multi-threaded, use of forkpty:DeprecationWarning",
]

[tool.ruff]
extend-exclude = ["docs/demos"]

[tool.ruff.lint]
extend-select = ["B", "I", "UP"]

[tool.vulture]
paths = ["commas/src", "zeta/src", "tests"]
min_confidence = 80

[tool.deptry]
known_first_party = ["connectors", "commas", "zeta", "zetad"]
package_module_name_map = { PyYAML = "yaml" }
